--- a/styles/style.css
+++ b/styles/style.css
@@ -31,25 +31,40 @@ hr {
 
 .btn-lang {
     width: 40px;
-    border: solid #323232 1px;
-    border-radius: 4px;
-    background: transparent;
+    height: 20px;
     cursor: pointer;
+    border-radius: 4px;
     transition: all 0.2s;
+}
+
+.ru-btn {
+    background-image: url(../assets/rus-b.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.eng-lang {
+    background-image: url(../assets/eng-b.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.switch-lang-ru {
+    background-color: #323232;
+    background-image: url(../assets/rus-w.svg);
+}
+
+.switch-lang-eng {
+    background-color: #323232;
+    background-image: url(../assets/eng-w.svg);
 }
 
 .btn-lang:hover {
     scale: 1.1;
 }
 
-.btn-lang:focus {
-    background-color: #323232;
-    color: #ffffff;
-}
-
-.active {
-    background-color: #323232;
-    color: #ffffff;
+.hidden {
+    display: none;
 }
 
 .container-ru {
@@ -96,8 +111,4 @@ hr {
     margin-top: 32px;
     margin-right: 48px;
     margin-left: 48px;
-}
-
-.hidden {
-    display: none;
 }
